# Flight-Simulator-Interpreter

./: CMakeLists.txt  Command.cpp  Command.h  ConditionParser.cpp  ConditionParser.h  ConnectControlClientCommand.cpp  ConnectControlClientCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  IfCommand.cpp  IfCommand.h  OpenDataServerCommand.cpp  OpenDataServerCommand.h  PrintCommand.cpp  PrintCommand.h  README.md  SleepCommand.cpp  SleepCommand.h  Var.cpp  Var.h  WhileCommand.cpp  WhileCommand.h  ex1.cpp  ex1.h  globals.cpp  globals.h  main.cpp
